fixed zoom on iOS

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -425,3 +425,9 @@ nav ul li a:hover {
   background-color: #8bc34a !important;
   
 }
+
+/* Prevents zoom on iOS */
+input,
+textarea {
+  font-size: 16px !important;
+}
